# ai-medical-receptionist

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
assets/: architecture.json
src/medreception/: __init__.py  config.py  db.py  main.py  models.py
src/medreception/agent/: conversation.py  tools.py
src/medreception/connectors/: __init__.py  anthropic_client.py  deepgram_client.py  sendgrid_client.py  twilio_client.py
src/medreception/dashboard/: api.py
src/medreception/security/: auth.py  crypto.py
src/medreception/services/: appointments.py  faq.py  notifications.py
src/medreception/telephony/: __init__.py  call_transfer.py  twilio_handler.py
src/medreception/voice/: __init__.py  stt.py  tts.py
tests/: conftest.py  test_agent_tools.py  test_appointments.py  test_faq.py
